--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^16.5.0",
+    "glob": "^11.0.2",
     "speedruncom.js": "github:retrozy1/speedruncom.js"
   },
   "main": "index.js",
