--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "type": "module",
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "glob": "^11.0.2",
-    "speedruncom.js": "github:retrozy1/speedruncom.js"
+    "dotenv": "^17.2.0",
+    "glob": "^11.0.3",
+    "speedruncom.js": "^2.0.2"
   },
-  "main": "index.js",
   "devDependencies": {
-    "@types/node": "^22.15.29",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "@types/node": "^24.0.14",
+    "tsx": "^4.20.3"
   }
 }
