--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           node-version: '18'
       - run: npm install
-      - run: npx tsx src/push.ts
+      - run: tsx src/push.ts
