--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -25,6 +25,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
-      - run: npm install
-      - run: tsx src/pull.ts
+          node-version: '22'
+      - run: npm ci
+      - run: npx tsx src/pull.ts
