--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,6 +16,6 @@ jobs:
           fetch-depth: 2
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
-      - run: npm install
-      - run: tsx src/push.ts
+          node-version: '22'
+      - run: npm ci
+      - run: npx tsx src/push.ts
